--- a/src/WebForms/WebFormsTemplates/N2.Templates.csproj
+++ b/src/WebForms/WebFormsTemplates/N2.Templates.csproj
@@ -471,7 +471,6 @@
     <Compile Include="Templates\Web\UI\TemplateUserControl2.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Templates\Web\UI\WebControls\Box.cs" />
     <Compile Include="Templates\Web\UI\WebControls\IBreadcrumbAppearance.cs" />
     <Compile Include="Templates\Web\UI\WebControls\Menu.cs" />
     <Compile Include="Templates\Web\UI\WebControls\Path.cs" />
@@ -505,6 +504,10 @@
     <ProjectReference Include="..\..\Framework\N2\N2.csproj">
       <Project>{F3C813FE-C51B-4C10-85E2-FD2560E73E72}</Project>
       <Name>N2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Mvc\MvcTemplates\N2.Management.csproj">
+      <Project>{10F7C179-B92D-4FCA-B78C-011E428D0CA3}</Project>
+      <Name>N2.Management</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
