--- a/src/Framework/Extensions.Tests/N2.Extensions.Tests.csproj
+++ b/src/Framework/Extensions.Tests/N2.Extensions.Tests.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Data.SQLite, Version=1.0.52.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\System.Data.SQLite.DLL</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions">
