--- a/src/Mvc/MvcTemplates/web.config
+++ b/src/Mvc/MvcTemplates/web.config
@@ -27,7 +27,7 @@
 	<n2 xmlns="http://n2cms.com/schemas/configuration/v3">
 		<!-- If you install a database from scratch you'll need to insert some required pages. 
 			This can be done by the web based installer located at http://yoursite/n2/installation/ -->
-		<host configSource="App_Data\web.n2.host.config" />
+		<host configSource="App_Data\n2_host.config" />
 		<engine>
 			<assemblies>
 				<!-- These assembly declarations are necessary in MEDIUM TRUST -->
