--- a/src/WebForms/WebFormsTemplates/Web.config
+++ b/src/WebForms/WebFormsTemplates/Web.config
@@ -26,7 +26,7 @@
 	</connectionStrings>
 
 	<n2 xmlns="http://n2cms.com/schemas/configuration/v3">
-		<host configSource="App_Data\Web.n2.host.config" />
+		<host configSource="App_Data\n2_host.config" />
 		<engine>
 			<assemblies>
 				<!-- These assembly declarations are necessary in MEDIUM TRUST -->
