--- a/src/Mvc/MvcTemplates/N2.Templates.Mvc.csproj
+++ b/src/Mvc/MvcTemplates/N2.Templates.Mvc.csproj
@@ -396,9 +396,7 @@
     <Content Include="Views\RssAggregator\Index.ascx" />
     <Content Include="Views\Shared\Empty.ascx" />
     <Content Include="Web.config" />
-    <Content Include="App_Data\web.n2.host.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
+    <Content Include="App_Data\n2_host.config" />
     <Content Include="Views\Shared\Error.aspx" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
