--- a/src/WebForms/WebFormsTemplates/N2.Templates.csproj
+++ b/src/WebForms/WebFormsTemplates/N2.Templates.csproj
@@ -581,10 +581,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Web.config" />
-    <Content Include="App_Data\Web.n2.host.config">
-      <DependentUpon>Web.config</DependentUpon>
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
     </Content>
+    <Content Include="App_Data\n2_host.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\Corporate\amazed.gif" />
