--- a/src/Framework/N2/N2.csproj
+++ b/src/Framework/N2/N2.csproj
@@ -146,7 +146,7 @@
     <Compile Include="Definitions\DefaultBinder.cs" />
     <Compile Include="Definitions\IBinder.cs" />
     <Compile Include="Definitions\ISystemNode.cs" />
-    <Compile Include="Definitions\IBindable.cs" />
+    <Compile Include="Definitions\IActiveBindable.cs" />
     <Compile Include="Details\EditableNumberAttribute.cs" />
     <Compile Include="Details\WithEditableVisibilityAttribute.cs" />
     <Compile Include="Details\EditableMetaTagAttribute.cs" />
